--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "critters": "^0.0.23",
     "d3": "^7.8.5",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
@@ -71,14 +72,14 @@
     "lucide-react": "^0.303.0",
     "next": "14.2.32",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.8.0",
     "redis": "^4.6.12",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
-    "sonner": "^1.3.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
