--- a/kubernetes/monitoring-deployment.yaml
+++ b/kubernetes/monitoring-deployment.yaml
@@ -1,209 +1,105 @@
-# CloudGuard AI Monitoring Stack
+# Self-Healing Monitoring and Automation
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prometheus
+  name: cloudguard-monitoring
   namespace: cloudguard-ai
   labels:
-    app: prometheus
-    tier: monitoring
+    app: cloudguard-monitoring
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: prometheus
+      app: cloudguard-monitoring
   template:
     metadata:
       labels:
-        app: prometheus
-        tier: monitoring
+        app: cloudguard-monitoring
     spec:
+      serviceAccountName: cloudguard-healing-sa
       containers:
-      - name: prometheus
-        image: prom/prometheus:latest
+      - name: monitoring-agent
+        image: cloudguard-ai/monitoring:latest
         ports:
-        - containerPort: 9090
-        args:
-          - '--config.file=/etc/prometheus/prometheus.yml'
-          - '--storage.tsdb.path=/prometheus'
-          - '--web.console.libraries=/etc/prometheus/console_libraries'
-          - '--web.console.templates=/etc/prometheus/consoles'
-          - '--storage.tsdb.retention.time=200h'
-          - '--web.enable-lifecycle'
-        volumeMounts:
-        - name: prometheus-config
-          mountPath: /etc/prometheus
-        - name: prometheus-storage
-          mountPath: /prometheus
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "250m"
-          limits:
-            memory: "2Gi"
-            cpu: "1000m"
-      volumes:
-      - name: prometheus-config
-        configMap:
-          name: prometheus-config
-      - name: prometheus-storage
-        persistentVolumeClaim:
-          claimName: prometheus-pvc
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: prometheus-service
-  namespace: cloudguard-ai
-spec:
-  selector:
-    app: prometheus
-  ports:
-  - protocol: TCP
-    port: 9090
-    targetPort: 9090
-  type: ClusterIP
-
----
-# Grafana Deployment
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: grafana
-  namespace: cloudguard-ai
-  labels:
-    app: grafana
-    tier: monitoring
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: grafana
-  template:
-    metadata:
-      labels:
-        app: grafana
-        tier: monitoring
-    spec:
-      containers:
-      - name: grafana
-        image: grafana/grafana:latest
-        ports:
-        - containerPort: 3000
+        - containerPort: 8080
         env:
-        - name: GF_SECURITY_ADMIN_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: cloudguard-secrets
-              key: grafana-password
-        - name: GF_USERS_ALLOW_SIGN_UP
-          value: "false"
-        volumeMounts:
-        - name: grafana-storage
-          mountPath: /var/lib/grafana
-        - name: grafana-dashboards
-          mountPath: /etc/grafana/provisioning/dashboards
-        - name: grafana-datasources
-          mountPath: /etc/grafana/provisioning/datasources
+        - name: KUBERNETES_NAMESPACE
+          value: "cloudguard-ai"
+        - name: HEALING_ENABLED
+          value: "true"
+        - name: PROMETHEUS_URL
+          value: "http://prometheus-service:9090"
+        - name: ALERT_MANAGER_URL
+          value: "http://alertmanager-service:9093"
         resources:
           requests:
-            memory: "256Mi"
+            memory: "128Mi"
             cpu: "100m"
           limits:
-            memory: "512Mi"
-            cpu: "500m"
-      volumes:
-      - name: grafana-storage
-        persistentVolumeClaim:
-          claimName: grafana-pvc
-      - name: grafana-dashboards
-        configMap:
-          name: grafana-dashboards
-      - name: grafana-datasources
-        configMap:
-          name: grafana-datasources
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: grafana-service
-  namespace: cloudguard-ai
-spec:
-  selector:
-    app: grafana
-  ports:
-  - protocol: TCP
-    port: 3000
-    targetPort: 3000
-  type: LoadBalancer
-
----
-# Elasticsearch Deployment
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: elasticsearch
-  namespace: cloudguard-ai
-  labels:
-    app: elasticsearch
-    tier: search
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: elasticsearch
-  template:
-    metadata:
-      labels:
-        app: elasticsearch
-        tier: search
-    spec:
-      containers:
-      - name: elasticsearch
-        image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
-        ports:
-        - containerPort: 9200
-        - containerPort: 9300
-        env:
-        - name: discovery.type
-          value: "single-node"
-        - name: xpack.security.enabled
-          value: "false"
-        - name: ES_JAVA_OPTS
-          value: "-Xms512m -Xmx512m"
+            memory: "256Mi"
+            cpu: "200m"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
         volumeMounts:
-        - name: elasticsearch-storage
-          mountPath: /usr/share/elasticsearch/data
-        resources:
-          requests:
-            memory: "1Gi"
-            cpu: "500m"
-          limits:
-            memory: "2Gi"
-            cpu: "1000m"
+        - name: healing-config
+          mountPath: /config
       volumes:
-      - name: elasticsearch-storage
-        persistentVolumeClaim:
-          claimName: elasticsearch-pvc
+      - name: healing-config
+        configMap:
+          name: self-healing-config
 
 ---
+# Service Account for Self-Healing Operations
 apiVersion: v1
-kind: Service
+kind: ServiceAccount
 metadata:
-  name: elasticsearch-service
+  name: cloudguard-healing-sa
   namespace: cloudguard-ai
-spec:
-  selector:
-    app: elasticsearch
-  ports:
-  - name: http
-    protocol: TCP
-    port: 9200
-    targetPort: 9200
-  - name: transport
-    protocol: TCP
-    port: 9300
-    targetPort: 9300
-  type: ClusterIP
+
+---
+# ClusterRole for Self-Healing Operations
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cloudguard-healing-role
+rules:
+- apiGroups: [""]
+  resources: ["pods", "nodes", "services", "endpoints"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: ["apps"]
+  resources: ["deployments", "replicasets"]
+  verbs: ["get", "list", "watch", "update", "patch"]
+- apiGroups: ["autoscaling"]
+  resources: ["horizontalpodautoscalers"]
+  verbs: ["get", "list", "watch", "update", "patch"]
+- apiGroups: ["metrics.k8s.io"]
+  resources: ["pods", "nodes"]
+  verbs: ["get", "list"]
+- apiGroups: ["custom.metrics.k8s.io"]
+  resources: ["*"]
+  verbs: ["get", "list"]
+
+---
+# ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cloudguard-healing-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cloudguard-healing-role
+subjects:
+- kind: ServiceAccount
+  name: cloudguard-healing-sa
+  namespace: cloudguard-ai
